Add support for document components
Still needs some fancy styling to look properly good

--- a/templates/isbehandlerdialog/foresporselompasient.hbs
+++ b/templates/isbehandlerdialog/foresporselompasient.hbs
@@ -1,4 +1,1 @@
-{{#> isbehandlerdialog/partials/base }}
-    {{#*inline "doctitle"}}Dialogmelding{{/inline}}
-    {{#*inline "title"}}Dialogmelding{{/inline}}
-{{/isbehandlerdialog/partials/base}}
+{{> isbehandlerdialog/partials/base items=this doctitle="Forespørsel om pasient"}}
