--- a/templates/isbehandlerdialog/partials/base.hbs
+++ b/templates/isbehandlerdialog/partials/base.hbs
@@ -4,11 +4,13 @@
     <meta charset="UTF-8"/>
     <style>
         @page {
-            margin: 1cm;
+            margin: 46px;
         }
 
         * {
             font-family: "Source Sans Pro", SourceSansPro, Source_Sans_Pro, ArialSystem, sans-serif;
+            color: #3E3832;
+            font-style: normal;
         }
 
         img {
@@ -17,67 +19,103 @@
             margin-left: 0.1em;
         }
 
+        h1, h2 {
+            font-weight: 500;
+            page-break-after: avoid;
+        }
+
         h1 {
-            font-size: 1.25em;
+            font-size: 24px;
+            line-height: 28px;
+        }
+
+        h2 {
+            font-size: 20px;
+            line-height: 25px;
+            margin-top: 48px;
         }
 
         h3 {
-            margin: 1.5em 0 0.5em  0;
+            margin-bottom: 0px;
+            font-size: 14px;
+            font-weight: bold;
         }
 
-        td {
-            font-size: 0.9em;
-            padding: 4px;
-            vertical-align: top;
-            word-wrap: break-word;
+        p {
+            width: 66%;
+            margin-top: 0px;
+            font-family: Source Sans Pro;
+            font-weight: normal;
+            font-size: 14px;
+            line-height: 20px;
+            letter-spacing: 0.2px;
+            color: #3E3832;
         }
 
-        th {
-            font-size: .8em;
+        a {
+            width: 66%;
+            margin-top: 0px;
+            display: inline;
+            margin-bottom: 1em;
+            font-family: Source Sans Pro;
+            font-weight: normal;
+            font-size: 14px;
+            line-height: 20px;
+            letter-spacing: 0.2px;
+            color: #3E3832;
         }
 
-        table {
-            width: 100%;
-            border: 1px black solid;
-            margin-bottom: 0.5cm;
-            margin-left: 0.1em;
-        }
-
-        body {
+        .avoidPageBreakInside {
             page-break-inside: avoid;
         }
 
-        .cellBottom {
-            border-bottom: 1px black solid;
+        .pageBreak {
+            page-break-after: always;
         }
-
     </style>
-    <title>{{ doctitle }} </title>
+    <title>{{ doctitle }}</title>
 </head>
 <body>
 
-<div id="header">
+
+{{#each items }}
+    {{#if title }}
+        <h3>{{ title }}</h3>
+    {{/if}}
+    {{#eq type 'HEADER_H1' }}
+
     <img alt="nav-logo" class="navlogo" src="{{ image "nav-logo-red.png" }}"/>
-    <h1 class="title">{{> title}}</h1>
-</div>
+    <h1>
+        {{#each texts }}
+            {{ this }}<br/>
+        {{/each}}
+    </h1>
 
-<table>
-    <tr>
-        <th>Fra</th>
-    </tr>
-    <tr>
-        <td class="cellBottom">NAV</td>
-    </tr>
+    {{else eq type 'HEADER_H2' }}
+        <h2>
+            {{#each texts }}
+                {{ this }}<br/>
+            {{/each}}
+        </h2>
+    {{else eq type 'HEADER' }}
+        <h2>
+            {{#each texts }}
+                {{ this }}<br/>
+            {{/each}}
+        </h2>
+    {{else eq type 'LINK' }}
+        {{#each texts }}
+            <p><a href="{{ this }}">{{ this }}</a></p>
+        {{/each}}
+    {{else}} <!-- eq type PARAGRAPH -->
+    <p>
+        {{#each texts }}
+            {{ breaklines this }}<br/>
+        {{/each}}
+    </p>
+    {{/eq}}
+{{/each}}
 
-    <tr>
-        <th>Til behandlende lege</th>
-    </tr>
-    <tr>
-        <td class="cellBottom">{{ dialogmelding.navnHelsepersonell }}</td>
-    </tr>
-
-
-</table>
 
 
 </body>
